--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "readme": "NativeScript Application",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "com.progresssoftware.sports",
+    "id": "org.nativescript.Sports",
     "tns-android": {
-      "version": "5.0.0"
+      "version": "5.1.0"
     },
     "tns-ios": {
       "version": "5.1.1"
