--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "readme": "NativeScript Application",
   "repository": "https://github.com/mdossant/Sports.git",
   "nativescript": {
-    "id": "org.nativescript.Sports",
-    "tns-android": {
-      "version": "5.2.1"
-    },
+    "id": "com.progresssoftware.sports",
     "tns-ios": {
       "version": "5.2.0"
+    },
+    "tns-android": {
+      "version": "5.2.1"
     }
   },
   "dependencies": {
